fix colors of some headers for better contrast

--- a/css/style.css
+++ b/css/style.css
@@ -1472,10 +1472,10 @@
     background-color: #dfe2e2;
   }
   .consortium a:link {
-    color: #07a2bb;
+    color: #387180;
   }
   .consortium a:visited {
-    color: #7d949a;
+    color: #387180;
   }
   .consortium a:hover, .consortium a:active, .consortium a:focus {
     color: #bfbbb5;
@@ -1527,7 +1527,7 @@
     border-color: #4b6569;
   }
   .consortium #content > h1 {
-    color: #fff;
+    color: #387180;
   }
   .consortium #content h2 {
     border-color: #dfe2e2;
@@ -1577,7 +1577,7 @@
   .consortium #content #exhibit-child-pages a:visited,
   .consortium #content #login-links a a:link,
   .consortium #content #login-links a a:visited {
-    color: #def9ff;
+    color: #387180;
   }
   .consortium #content .items-nav a:hover, .consortium #content .items-nav a:active, .consortium #content .secondary-nav a:hover, .consortium #content .secondary-nav a:active,
   .consortium #content #secondary-nav a:hover,
